Se crea la lista de Items

--- a/src/pages/terminados/terminados.component.html
+++ b/src/pages/terminados/terminados.component.html
@@ -1,10 +1,9 @@
 <ion-header>
-    <ion-navbar>
-      <ion-title>Terminaods</ion-title>
+    <ion-navbar color="primary">
+      <ion-title>Terminados</ion-title>
     </ion-navbar>
   </ion-header>
-  
+
   <ion-content padding>
     <h1>No hay nada que ver...</h1>
   </ion-content>
-  
