--- a/src/pages/pendientes/pendientes.component.html
+++ b/src/pages/pendientes/pendientes.component.html
@@ -1,10 +1,36 @@
 <ion-header>
-    <ion-navbar>
-      <ion-title>Pendientes</ion-title>
-    </ion-navbar>
-  </ion-header>
-  
-  <ion-content padding>
-    <h1>Lista de pendientes!!</h1>
-  </ion-content>
-  
+  <ion-navbar color="primary">
+    <ion-title>Pendientes</ion-title>
+  </ion-navbar>
+</ion-header>
+
+<ion-content padding>
+
+  <ion-card *ngFor="let lista of _listaDeseos.listas">
+    <ion-item>
+      Boton!!
+    </ion-item>
+    <h2>{{ lista.nombre }}</h2>
+    <ion-list>
+      <ion-item>
+        <ion-icon ios="ios-checkmark-circle" md="md-checkmark-circle"></ion-icon>
+        Tetris
+      </ion-item>
+      <ion-item>
+        <ion-icon ios="ios-checkmark-circle" md="md-checkmark-circle"></ion-icon>
+        Tetris
+      </ion-item>
+      <ion-item>
+        <ion-icon ios="ios-checkmark-circle" md="md-checkmark-circle"></ion-icon>
+        Tetris
+      </ion-item>
+    </ion-list>
+  </ion-card>
+
+  <ion-fab right bottom>
+    <button ion-fab color="primary" (click)="irAgregar()">
+      <ion-icon ios="ios-add" md="md-add"></ion-icon>
+    </button>
+  </ion-fab>
+
+</ion-content>
