--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,28 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.text-center {
+  text-align: center;
+}
+
+.tachado {
+  text-decoration: line-through;
+}
+
+.text-white {
+  color: white;
+}
+
+.caja-vacia {
+  color: #C7C7C7;
+  padding-top: 40%;
+}
+
+.caja-vacia p {
+  font-size: 30px;
+}
+
+.icono-grande {
+  font-size: 100px;
+}
