--- a/src/pages/pendientes/pendientes.component.html
+++ b/src/pages/pendientes/pendientes.component.html
@@ -6,23 +6,33 @@
 
 <ion-content padding>
 
-  <ion-card *ngFor="let lista of _listaDeseos.listas">
-    <ion-item>
-      Boton!!
+  <ion-grid *ngIf="(_listaDeseos.listas | pendientes).length === 0">
+    <ion-row>
+      <ion-col class="text-center caja-vacia">
+        <ion-icon class="icono-grande" ios="ios-sunny" md="md-sunny"></ion-icon>
+        <p>
+          No hay ninguna lista.
+        </p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-card *ngFor="let lista of _listaDeseos.listas | pendientes; let i = index">
+    <ion-item color="dark" (click)="verDetalle( lista, i )">
+      {{ lista.nombre }}
+      <ion-note item-right>
+        {{ lista.items.length }} items
+      </ion-note>
     </ion-item>
-    <h2>{{ lista.nombre }}</h2>
+
     <ion-list>
-      <ion-item>
-        <ion-icon ios="ios-checkmark-circle" md="md-checkmark-circle"></ion-icon>
-        Tetris
+      <ion-item *ngFor="let item of lista.items | slice:0:2" (click)="verDetalle( lista, i )">
+        <ion-icon *ngIf="!item.completado" ios="ios-square-outline" md="md-square-outline"></ion-icon>
+        <ion-icon *ngIf="item.completado" ios="ios-checkbox-outline" md="md-checkbox-outline"></ion-icon>
+        {{ item.nombre }}
       </ion-item>
-      <ion-item>
-        <ion-icon ios="ios-checkmark-circle" md="md-checkmark-circle"></ion-icon>
-        Tetris
-      </ion-item>
-      <ion-item>
-        <ion-icon ios="ios-checkmark-circle" md="md-checkmark-circle"></ion-icon>
-        Tetris
+      <ion-item *ngIf="lista.items.length > 2" class="text-center">
+        <ion-icon ios="ios-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
       </ion-item>
     </ion-list>
   </ion-card>
