--- a/src/pages/terminados/terminados.component.html
+++ b/src/pages/terminados/terminados.component.html
@@ -1,9 +1,40 @@
 <ion-header>
-    <ion-navbar color="primary">
-      <ion-title>Terminados</ion-title>
-    </ion-navbar>
-  </ion-header>
+  <ion-navbar color="primary">
+    <ion-title>Terminados</ion-title>
+  </ion-navbar>
+</ion-header>
 
-  <ion-content padding>
-    <h1>No hay nada que ver...</h1>
-  </ion-content>
+<ion-content padding>
+
+  <ion-grid *ngIf="(_listaDeseos.listas | pendientes:true).length === 0">
+    <ion-row>
+      <ion-col class="text-center caja-vacia">
+        <ion-icon class="icono-grande" ios="ios-sunny" md="md-sunny"></ion-icon>
+        <p>
+          No hay ninguna lista terminada.
+        </p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-card *ngFor="let lista of _listaDeseos.listas | pendientes:true; let i = index">
+    <ion-item color="dark" (click)="verDetalle( lista, i )">
+      {{ lista.nombre }}
+      <ion-note item-right>
+        {{ lista.items.length }} items
+      </ion-note>
+    </ion-item>
+
+    <ion-list>
+      <ion-item *ngFor="let item of lista.items | slice:0:2" (click)="verDetalle( lista, i )">
+        <ion-icon *ngIf="!item.completado" ios="ios-square-outline" md="md-square-outline"></ion-icon>
+        <ion-icon *ngIf="item.completado" ios="ios-checkbox-outline" md="md-checkbox-outline"></ion-icon>
+        {{ item.nombre }}
+      </ion-item>
+      <ion-item *ngIf="lista.items.length > 2" class="text-center">
+        <ion-icon ios="ios-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+
+</ion-content>
